# cpp_academy_2

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  TODO.md  asa-poc-miia.pc.in  conanfile.py  conanfile.txt  meson.build  meson_options.txt  miia.pc.in
core/client/: meson.build
core/client/include/client/: grpc_client_backend.hpp  i_client_backend.hpp  inference_client.hpp  inprocess_backend.hpp  value_convert.hpp
core/client/src/: grpc_client_backend.cpp  inference_client.cpp  inprocess_backend.cpp  main.cpp
core/inference/: meson.build
core/inference/include/inference/: backend_registry.hpp  inference_engine.hpp  model_backend.hpp  onnx_backend.hpp  python_backend.hpp
core/inference/src/: inference_engine.cpp  model_backend.cpp  onnx_backend.cpp  python_backend.cpp
core/server/: meson.build
core/server/include/server/: worker_server.hpp
core/server/src/: main.cpp  worker_server.cpp
core/utils/: meson.build
docker/: Dockerfile.server
docs/: Doxyfile  README.md  meson.build
docs/Templates/: commands.tex  main.tex
docs/Templates/content/: cover.tex  vision_doc.tex
docs/doxygen/: Doxyfile  MAINPAGE.md
docs/images/: classes_diagram.drawio  predict_inprocess_onnx.drawio  predict_inprocess_python.drawio
docs/images/draw.io/: classes_diagram.drawio  predict_grpc_onnx.drawio  predict_grpc_python.drawio  predict_inprocess_onnx.drawio  predict_inprocess_python.drawio
docs/meetings/miia-ata-f8c17192/: main.tex
docs/product_vision/: main.tex
docs/product_vision/miia-vp-49290a7f/: main.tex
docs/reports/asa-miia-002/: commands.tex  main.tex
docs/reports/asa-miia-003/: main.tex
docs/reports/asa-miia-004/: main.tex
docs/reports/miia-rel-323690a5/: main.tex
docs/reports/miia-rel-333869a8/: main.tex
docs/reports/miia-rel-46ff681a/: commands.tex  main.tex
docs/reports/miia-rel-5b74de04/: commands.tex  main.tex
docs/reports/miia-rel-66371bb6/: commands.tex  main.tex
docs/reports/miia-rel-828ef7e8/: main.tex
docs/reports/miia-rel-d6ee0363/: main.tex
docs/software_design/: main.tex
docs/software_design/content/: doc.tex  revision.tex
docs/visao/: commands.tex  main.tex
examples/bvr_air_combat_model/: pyproject.toml
examples/bvr_air_combat_model/tests/: test_main.py
examples/poc/: .gitignore  Makefile  README.md  conanfile.py  meson.build  meson_options.txt
examples/poc/cpp/client/: meson.build
examples/poc/cpp/client/include/client/: inference_client.hpp
examples/poc/cpp/client/src/: inference_client.cpp  main.cpp
examples/poc/cpp/tests/: meson.build
examples/poc/cpp/tests/integration/: test_worker_integration.cpp
examples/poc/cpp/tests/unit/: test_inference_client.cpp
examples/poc/cpp/worker/: meson.build
examples/poc/cpp/worker/include/worker/: backend_registry.hpp  inference_engine.hpp  model_backend.hpp  onnx_backend.hpp  python_backend.hpp  s3_model_source.hpp  worker_server.hpp
examples/poc/cpp/worker/src/: inference_engine.cpp  main.cpp  model_backend.cpp  onnx_backend.cpp  python_backend.cpp  s3_model_source.cpp  worker_server.cpp
examples/poc/docker/: Dockerfile.worker
examples/poc/example/: conanfile.py  meson.build
examples/poc/example/src/: main.cpp  meson.build
examples/poc/proto/: common.proto  worker.proto
examples/poc/python/: requirements.txt
examples/poc/python/models/: PPO_seed_1975_3600000_steps.onnx  miia_model.py  simple_linear.py  tutorial_model.py
examples/poc/python/scripts/: create_test_models.py
examples/poc/scripts/: ssh.sh  worker_docker.sh
examples/poc_use_case/: .clang-format  .gitignore  .gitlab-ci.yml  Makefile  asa-tutorial.pc.in  conanfile.py  meson.build  version.sh
examples/poc_use_case/include/asa/tutorial/: AsaExample.hpp  HazardSource.hpp  Hydrodynamics.hpp  Scanner.hpp  Ship.hpp  ShipAction.hpp  ShipAgent.hpp  ShipState.hpp  config.hpp
examples/poc_use_case/resources/: config.json
examples/poc_use_case/resources/demo/: tutorial.json
examples/poc_use_case/resources/tacview/Data/Database/Default Properties/: hazard_source.xml
examples/poc_use_case/resources/templates/HazardSource/: template.epp
examples/poc_use_case/resources/templates/Hydrodynamics/: template.epp
examples/poc_use_case/resources/templates/Scanner/: template.epp
examples/poc_use_case/resources/templates/Ship/: template.epp
examples/poc_use_case/resources/templates/ShipAgent/: template.epp
examples/poc_use_case/resources/templates/ShipNav/: template.epp
examples/poc_use_case/resources/templates/Steerpoint/: template.epp
examples/poc_use_case/scripts/: build.sh  deploy.sh
examples/poc_use_case/src/: AsaExample.cpp  HazardSource.cpp  Hydrodynamics.cpp  Scanner.cpp  Ship.cpp  ShipAction.cpp  ShipAgent.cpp  ShipState.cpp  export.cpp  meson.build
examples/poc_use_case/test/: meson.build
examples/poc_use_case/test/unit/: example.cpp  meson.build
examples/registry/: .gitignore
examples/sb3_ppo_to_onnx_converter/: README.md  pyproject.toml
examples/sb3_ppo_to_onnx_converter/src/sb3_ppo_to_onnx_converter/: main.py
examples/sb3_ppo_to_onnx_converter/tests/: test_main.py
proto/: common.proto  meson.build  server.proto
python/: meson.build  procedural_model_template.py
python/models/: miia_model.py  pilotBT.py  tutorial_model.py
python/scripts/: check_model.py  create_test_models.py
python/sdk/: Makefile  README.md  miia_model.py  pilotBT.py  requirements.txt  state_example.json  test_model.py
scripts/: build.sh  deploy.sh  worker_docker.sh
src/runtime/: engine.cpp  inference_orchestrator.cpp  inference_provider.cpp  numerical_runtime.cpp  procedural_runtime.cpp  symbolic_runtime.cpp
tests/: meson.build
tests/integration/: meson.build  sandbox.cpp  test_grpc_onnx.cpp  test_grpc_python.cpp  test_inprocess_onnx.cpp  test_inprocess_python.cpp  test_server.cpp
tests/unit/: meson.build  test_backend_registry.cpp  test_inference_engine.cpp  test_onnx_backend.cpp  test_python_backend.cpp  test_server.cpp  test_value.cpp  test_value_convert.cpp
(+40 files in other folders)
