# ============================================
# Opções de Build — Miia
# ============================================

option('enable_gpu',
    type: 'boolean',
    value: false,
    description: 'Habilita suporte a GPU (CUDA) no ONNX Runtime',
)

option('enable_docs',
    type: 'boolean',
    value: false,
    description: 'Build documentation'
)

option('build_tests',
    type: 'boolean',
    value: false,
    description: 'Build tests'
)