[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sb3_ppo_to_onnx_converter"
version = "0.1.0"
description = "Uma ferramenta de linha de comando para carregar modelos SB3 PPO e exportá-los no formato ONNX"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "stable-baselines3",
    "torch",
    "onnx",
    "onnxruntime",
    "onnxscript",
    "numpy"
]

[project.scripts]
# Cria o comando 'sb3ppo2onnx' no terminal
sb3ppo2onnx = "sb3_ppo_to_onnx_converter.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sb3_ppo_to_onnx_converter"]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-mock", # Ajudar a mockar o carregamento do SB3 PPO
  "pytest-cov",  # Coverage/Cobertura
]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"
# Isto executa o pytest e gera um relatório para o código dentro do pacote
cov = "pytest --cov=sb3_ppo_to_onnx_converter --cov-report=term-missing {args:tests}"