project('apaga', 'cpp',
    version: '1.0.0',
    license: 'Copyright © 2026 ASA. All rights reserved.',
    default_options : [
        'c_std=c11',
        'cpp_std=c++17',
        'warning_level=3',
        'werror=false',
    ]
)

mixr_dep = dependency('mixr')
asa_poc_miia_dep = dependency('asa-poc-miia')

subdir('src')